# Ant-Net

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen.txt  generator  log1.txt  log13.txt  log19.txt  log20.txt  log21.txt  log22.txt  log23.txt  log31.txt  log43.txt  log48.txt  log54.txt  log55.txt  log56.txt  log57.txt  log6.txt  log7.txt  log8.txt  log_avg.txt  log_bench_mark.txt  log_hyperas.txt  log_smaller_kernal.txt  out.txt
data/: generated_data__0_-1__0_-1__0_-1__0_1.antgen  generated_data__0_-1__0_-1__0_1__0_-1.antgen  generated_data__0_-1__0_-1__0_1__0_1.antgen  generated_data__0_-1__0_1__0_-1__0_-1.antgen  generated_data__0_-1__0_1__0_-1__0_1.antgen  generated_data__0_-1__0_1__0_1__0_-1.antgen  generated_data__0_-1__0_1__0_1__0_1.antgen  generated_data__0_1__0_-1__0_-1__0_-1.antgen  generated_data__0_1__0_-1__0_-1__0_1.antgen  generated_data__0_1__0_-1__0_1__0_-1.antgen  generated_data__0_1__0_-1__0_1__0_1.antgen  generated_data__0_1__0_1__0_-1__0_-1.antgen  generated_data__0_1__0_1__0_-1__0_1.antgen  generated_data__0_1__0_1__0_1__0_-1.antgen  generated_data__0_1__0_1__0_1__0_1.antgen
include/: ant.h  display.h  grid.h  hsv_to_rgb.h  possible_states.h
scripts/: generator.py  tester.py  torus_transform_layer.py  train_net.py
src/: .generate.cpp.swp  .main.cpp.swp  .possible_states.cpp.swp  ant.cpp  display.cpp  generate.cpp  generate.cu  generated_to_pic.cpp  hsv_to_rgb.cpp  main.cpp  possible_states.cpp  run_ant_main.cpp  tests.cpp
